--- a/1b.html
+++ b/1b.html
@@ -160,7 +160,7 @@
                 <label for="password">Password</label>
                 <div class="password-field">
                     <input type="password" id="password" placeholder="Enter at least 8+ characters" required>
-                    <span class="password-toggle">👁️</span>
+                    <span class="password-toggle"></span>
                 </div>
             </div>
 
@@ -168,7 +168,7 @@
                 <label for="confirm-password">Re-enter Password</label>
                 <div class="password-field">
                     <input type="password" id="confirm-password" placeholder="Enter at least 8+ characters" required>
-                    <span class="password-toggle">👁️</span>
+                    <span class="password-toggle"></span>
                 </div>
             </div>
 
