--- a/1c.html
+++ b/1c.html
@@ -151,8 +151,7 @@
         </div>
         <p class="subtitle">Please input your payment details</p>
 
-        <div class="card-types">
-            <input type="radio" id="card" name="payment" checked>
+        <div class="card-types" style="display: flex; justify-content: space-between; width: calc(100% / 3);">
             <img src="assets/visa-logo.png" alt="Visa Logo" />
             <img src="assets/mastercard-logo.png" alt="Mastercard Logo" />
             <img src="assets/amex-logo.png" alt="American Express Logo" />
