--- a/3b.html
+++ b/3b.html
@@ -192,7 +192,7 @@
             <path d="M2 3l10 9 10-9" stroke="currentColor" fill="none"/>
         </svg>
         <h1 style="margin-top: 1rem;">Check your email!</h1>
-        <p>Thanks! An email has been to your inbox. Please click on the URL to verify your identity and follow the steps to set a new password.</p>
+        <p>Thanks! An email has been to your inbox. Please click on the URL to verify your identity and follow the steps to set a new password</p>
        
         <form>
             <button type="submit" class="send-button">Open email inbox</button>
